<resources>
    <string name="app_name">侣信</string>
    <string name="common_choice">选择</string>
    <string name="common_comment">回复</string>
    <string name="common_send">发送</string>
    <string name="common_cancel">取消</string>
    <string name="common_upgrade">升级</string>
    <string name="common_account">帐号</string>
    <string name="common_confirm">确定</string>
    <string name="common_query">查询</string>
    <string name="common_gender">性别</string>
    <string name="common_handle">处理</string>
    <string name="common_sysmessage">系统消息</string>
    <string name="common_system">系统</string>
    <string name="common_message">消息</string>
    <string name="common_agree">同意</string>
    <string name="common_refuse">拒绝</string>
    <string name="common_ignore">忽略</string>
    <string name="common_back">返回</string>
    <string name="common_mygroups">我的群组</string>
    <string name="common_has_agree">已同意</string>
    <string name="common_has_refuse">已拒绝</string>
    <string name="common_has_ignore">已忽略</string>
    <string name="common_add">添加</string>
    <string name="common_contacts">通讯录</string>
    <string name="common_copy">复制</string>
    <string name="common_forward">转发</string>
    <string name="common_shared">分享</string>
    <string name="common_notice">通知</string>
    <string name="common_revoke">撤销</string>
    <string name="common_man">男</string>
    <string name="common_female">女</string>
    <string name="common_edit">编辑</string>
    <string name="common_feedback">建议反馈</string>
    <string name="common_delete">删除</string>
    <string name="common_open">打开</string>
    <string name="common_location">位置</string>
    <string name="common_map">地图</string>
    <string name="common_about">关于</string>
    <string name="common_hint">提示</string>
    <string name="common_save">保存</string>
    <string name="common_setting">设置</string>
    <string name="common_detail">详情</string>
    <string name="common_trend">发现</string>
    <string name="common_my">我</string>
    <string name="common_dissolve">解散</string>
    <string name="common_quit">退出</string>
    <string name="common_create">创建</string>
    <string name="common_detection">检测</string>
    <string name="common_camera">拍照</string>
    <string name="common_camera_recorder">拍摄</string>
    <string name="common_album">相册</string>
    <string name="common_image">图片</string>
    <string name="common_download">下载</string>
    <string name="common_current_location">当前位置：%1$s</string>
    <string name="common_detailed">详细资料</string>
    <string name="common_search">搜索</string>
    <string name="common_multiselect">多选</string>
    <string name="common_singleselect">单选</string>
    <string name="common_noresult">没有结果</string>
    <string name="common_contact">联系人</string>
    <string name="common_file">文档</string>
    <string name="common_mangment">管理</string>
    <string name="common_resume_download">继续下载</string>
    <string name="common_moment">动态</string>
    <string name="common_praise">点赞</string>
    <string name="label_format_kilometre">%1$.2f公里</string>
    <string name="label_format_metre">%1$d米</string>
    <string name="menu_chat_top">置顶聊天</string>
    <string name="menu_cancel_top">取消置顶</string>
    <string name="menu_mark_noread">标为未读</string>
    <string name="menu_mark_read">标为已读</string>
    <string name="menu_delete_chat">删除聊天</string>
    <string name="label_logout">退出登录</string>
    <string name="label_logout_hint">确定要退出当前帐号吗?</string>
    <string name="label_killapp">关闭应用</string>
    <string name="label_killapp_hint">这样将无法接收到消息，确定关闭程序吗？</string>
    <string name="label_file_stopdownload">停止下载</string>
    <string name="label_file_download">已下载%1$s</string>
    <string name="label_file_choice">选择文件</string>
    <string name="label_file_info">查看文件</string>
    <string name="label_search_group">搜索群组:%1$s</string>
    <string name="label_search_pubaccount">搜公众号:%1$s</string>
    <string name="label_enter_pubaccount">进入公众号</string>
    <string name="label_subscribe">关注</string>
    <string name="label_unsubscribe">不再关注</string>
    <string name="label_function_summary">介绍</string>
    <string name="label_homepage">主页</string>
    <string name="label_pubaccount">公众号:%1$s</string>
    <string name="label_org_list">组织结构</string>
    <string name="label_copy_url">复制链接</string>
    <string name="label_share_moment">分享到动态</string>
    <string name="label_share_friend">分享给联系人</string>
    <string name="label_open_browser">浏览器中打开</string>
    <string name="label_changetext_size">调整字体</string>
    <string name="label_geting">获取中&#8230;</string>
    <string name="label_read_all_text">查看全文</string>
    <string name="label_enter_now">立即体验</string>
    <string name="label_login_password">密码</string>
    <string name="label_login">登录</string>
    <string name="label_user_oldpassword">旧密码：</string>
    <string name="label_user_newpassword">新密码：</string>
    <string name="label_user_account">帐号：</string>
    <string name="label_user_telephone">电话：</string>
    <string name="label_user_email">邮箱：</string>
    <string name="label_user_org">组织：</string>
    <string name="label_user_icon">头像：</string>
    <string name="label_user_name">名称：</string>
    <string name="label_user_gender">性别：</string>
    <string name="label_user_motto">签名：</string>
    <string name="label_detail">详细资料</string>
    <string name="label_ablbum_count">%d张</string>
    <string name="label_ablbum_all">所有图片</string>
    <string name="label_rule">权限</string>
    <string name="label_chat">对话</string>
    <string name="label_starark">星标</string>
    <string name="label_contacts_org">组织</string>
    <string name="label_contacts_group_chat">群组</string>
    <string name="label_contacts_public">公众号</string>
    <string name="label_contacts_frend_count">一共%d位联系人</string>
    <string name="label_my_created">我创建的</string>
    <string name="label_my_join">我加入的</string>
    <string name="label_group_icon">群徽：</string>
    <string name="label_group_name">名称：</string>
    <string name="label_group_summary">简介：</string>
    <string name="label_group_founder">创建者：</string>
    <string name="label_group_member">群成员：</string>
    <string name="label_group_invite">邀请加入</string>
    <string name="label_group_ignore">屏蔽群消息</string>
    <string name="label_group_apply">申请加入</string>
    <string name="label_group_create">创建群组</string>
    <string name="label_group_modify">修改群组</string>
    <string name="label_group_detail">群资料</string>
    <string name="label_group_members">群成员列表</string>
    <string name="label_group_create_succesed">创建成功</string>
    <string name="label_group_invite_count">邀请(%d)</string>
    <string name="label_album_selected_count">确定(%1$s)</string>
    <string name="label_menu_theme">主题设置</string>
    <string name="label_menu_album">我的相册</string>
    <string name="label_setting_modify_password">修改密码</string>
    <string name="label_setting_modify_motto">修改签名</string>
    <string name="label_setting_profile">个人信息</string>
    <string name="label_setting_notify">消息设置</string>
    <string name="label_setting_update">版本更新</string>
    <string name="label_setting_about">关于侣信</string>
    <string name="label_setting_quitapp">退出应用</string>
    <string name="label_setting_server">服务配置</string>
    <string name="label_setting_cache">清除缓存</string>
    <string name="label_setting_newversion">新版本:%1$s</string>
    <string name="label_setting_serverurl">服务端地址</string>
    <string name="label_setting_serverurl_hint">格式如:http://192.168.1.1:8080/lvxin-server\n或者http://lvxin.farsunset.com</string>
    <string name="label_setting_cimport_hint">CIM端口，不是web服务器的端口</string>
    <string name="label_setting_server_hint">具体配置信息请询问你的系统管理员</string>
    <string name="label_ignore_group_message">打开后将不会收到该群的聊天消息</string>
    <string name="label_shake_record">摇到的人</string>
    <string name="label_sound_switch">声音开关</string>
    <string name="label_sound_type">提示音类型</string>
    <string name="label_sound_system">系统</string>
    <string name="label_sound_classic">经典</string>
    <string name="label_sound_dingdong">叮咚</string>
    <string name="label_publish">发布</string>
    <string name="label_throw">扔出</string>
    <string name="label_moment_publish">分享时光</string>
    <string name="label_moment_message">圈子消息</string>
    <string name="label_moment_replay_user"><Data><![CDATA[<font color="#3C568B">%1$s</font>]]></Data>回复<Data><![CDATA[<font color="#3C568B">%2$s</font>]]></Data>:%3$s</string>
    <string name="label_moment_replay"><Data><![CDATA[<font color="#3C568B">%1$s</font>]]></Data>:%2$s</string>
    <string name="label_moment_me">我的空间</string>
    <string name="label_shake_loading">正在搜寻同一时刻摇晃手机的人</string>
    <string name="label_function_moment">时刻空间</string>
    <string name="label_function_nearby">附近的人</string>
    <string name="label_function_bottle">漂流瓶</string>
    <string name="label_function_shake">摇一摇</string>
    <string name="label_chat_soundrecord_normal">按住,录音</string>
    <string name="label_chat_soundrecord_abort">松开,结束</string>
    <string name="label_chat_soundrecord_send">松开,发送</string>
    <string name="label_chat_soundcancle">手指上滑,取消发送</string>
    <string name="label_chat_unlashcancle">松开手指,取消发送</string>
    <string name="label_create_chat">创建新聊天</string>
    <string name="label_recent_chat">最近聊天</string>
    <string name="title_contacts_verify">请求验证</string>
    <string name="title_delete_message">删除消息</string>
    <string name="title_choice_picture">选择图片方式</string>
    <string name="title_choice_contact">选择联系人</string>
    <string name="title_save_config">保存设置</string>
    <string name="title_moment_rule">设置空间权限</string>
    <string name="title_theme_setting">主题设置</string>
    <string name="title_look_pubaccount">查看公众号</string>
    <string name="title_message_forward">消息转发</string>
    <string name="tip_has_sent">已发</string>
    <string name="tip_has_read">已读</string>
    <string name="tip_save_loading">正在保存,请稍候&#8230;</string>
    <string name="tip_conn_server_failed">服务器暂时无法访问</string>
    <string name="tip_network_disable">网络连接不可用</string>
    <string name="tip_cim_conn_failed">暂时无法连接到服务器</string>
    <string name="tip_data_beall">我也是有底线的</string>
    <string name="tip_loading">正在%1$s,请稍候&#8230;</string>
    <string name="tip_unknow_distance">未知距离</string>
    <string name="tip_unknow_location">未知地址</string>
    <string name="tip_handle_succeed">处理成功</string>
    <string name="tip_no_new_version">当前已经是最新版本啦!</string>
    <string name="tip_file_download_complete">下载完成，保存在：%1$s</string>
    <string name="tip_file_download_failed">下载失败，请稍候再试</string>
    <string name="tip_send_request_complete">发送请求成功，等待对方验证!</string>
    <string name="tip_article_deleted">这条内容已经被删除了!</string>
    <string name="tip_photo_video_download_complete">下载完成，已经保存在您的相册</string>
    <string name="tip_message_revoke_failed">消息撤销失败，对方已经接收!</string>
    <string name="tip_required_name">请填写名称</string>
    <string name="tip_search_noresult">没有查询到相关结果</string>
    <string name="tip_required_article">不能发表空内容哟!</string>
    <string name="tip_message_forward_completed">消息发送成功</string>
    <string name="tip_publish_complete">发布成功</string>
    <string name="tip_bottle_publish_complete">瓶子已经流向大海，等待有缘人吧!</string>
    <string name="tip_group_dissolve_complete">已经成功解散该群</string>
    <string name="tip_group_quit_complete">已经成功退出该群</string>
    <string name="tip_group_kickout_complete">已经成功踢出该成员</string>
    <string name="tip_group_invite_complete">发送邀请成功，等待对方确认!</string>
    <string name="tip_save_complete">保存成功</string>
    <string name="tip_oldpassword_error">旧密码错误</string>
    <string name="tip_account_or_password_error">帐号或者密码错误</string>
    <string name="tip_account_invailed">当前帐号不存在</string>
    <string name="tip_account_disabled">当前帐号被系统禁用</string>
    <string name="tip_delete_comment">确定删除这条评论吗?</string>
    <string name="tip_find_newversion">发现新版本</string>
    <string name="tip_begin_download">开始下载&#830;</string>
    <string name="tip_delete_message">确定删除与之相关的本地消息记录吗?</string>
</resources>