<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/abc_ic_menu_overflow_material"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/bar_menu_update"
                android:title="@string/common_edit"
                android:icon="@drawable/ofm_remarks_icon" />

            <item
                android:id="@+id/bar_menu_delete"
                android:title="@string/common_delete"
                android:icon="@drawable/icon_menu_delete" />

            <item
                android:id="@+id/bar_menu_invite"
                android:title="@string/label_group_invite"
                android:icon="@drawable/icon_menu_invitation" />
        </menu>
    </item>

</menu>