<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/groupInfoView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_global_toolbar"
        android:id="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/iconSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_top"
        android:gravity="center_vertical"
        android:layout_marginTop="10dip"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/label_group_icon"
            android:textColor="@android:color/black" />


        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/icon_setting_arrow" />

        <com.farsunset.lvxin.component.WebImageView
            android:id="@+id/icon"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_toLeftOf="@id/arrow"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/logo_group_normal" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1.0px"
        android:background="@drawable/item_background_middle"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_group_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/edittext_full_bg_selector"
            android:inputType="text"
            android:textSize="14sp"
            android:maxLength="10"
            android:textColor="@color/theme_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_bottom"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_group_summary"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:layout_marginLeft="10dip"
            android:gravity="top|left"
            android:background="@drawable/edittext_full_bg_selector"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:textSize="14sp"
            android:padding="5dip"
            android:textColor="@color/text_grey" />
    </LinearLayout>

</LinearLayout>