<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/circleItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dip"
        android:background="@drawable/item_background_top"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/icon_moment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/label_function_moment"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:id="@+id/newMsgHintView"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dip"
            android:layout_centerVertical="true"
            android:visibility="gone">

            <com.farsunset.lvxin.component.WebImageView
                android:id="@+id/newMsgUserIcon"
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:padding="3dip" />

            <ImageView
                android:layout_width="12dip"
                android:layout_height="12dip"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/dot_nor_red" />
        </RelativeLayout>

        <TextView
            android:id="@+id/new_msg_count_label"
            style="@style/badgeTextViewStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dip"
            android:layout_toLeftOf="@id/newMsgHintView"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nearbyItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_background_bottom"
        android:gravity="center_vertical"
        android:paddingLeft="12dp">

        <ImageView
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/icon_neary_contacts" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/label_function_nearby"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottleItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dip"
        android:background="@drawable/item_background_top"
        android:gravity="center_vertical"
        android:paddingLeft="12dp">

        <ImageView
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/icon_floater_bottle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/label_function_bottle"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/bottle_new_msg_count_label"
            style="@style/badgeTextViewStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dip"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shakeItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_background_bottom"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="26dip"
            android:layout_height="26dip"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/icon_shake_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/label_function_shake"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/shake_new_msg_count_label"
            style="@style/badgeTextViewStyle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dip"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>

