<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_global_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/item_to_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/item_background_top"
                android:padding="10dp">

                <com.farsunset.lvxin.component.WebImageView
                    android:id="@+id/icon"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dip"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dip"
                    android:layout_toRightOf="@id/icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/groupId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/theme_green"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background_middle"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_group_founder"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/founderAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <com.farsunset.lvxin.component.WebImageView
                    android:id="@+id/founderIcon"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lookMemberBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background_middle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/memberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginRight="3dip"
                    android:text="@string/label_group_member"
                    android:textColor="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:clickable="false"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background_bottom"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/label_group_summary"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:gravity="left"
                    android:textColor="@color/text_grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ignoreMessageBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/item_background_single"
                    android:onClick="onClick"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_group_ignore"
                        android:textColor="@android:color/black" />

                    <Switch
                        android:id="@+id/ignoreMessageCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/item_background_bottom"
                        android:paddingBottom="5dip"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip"
                        android:paddingTop="5dip"
                        android:text="@string/label_ignore_group_message"
                        android:textColor="@color/text_grey"
                        android:textSize="13sp" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/joinButton"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dip"
                android:layout_marginBottom="60dp"
                android:layout_marginRight="20dip"
                android:layout_marginTop="50dip"
                android:background="@drawable/common_button_green"
                android:text="@string/label_group_apply"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>